integrated streaming url with frontend

--- a/movie-streaming/movies/templates/movies/movies-individual.html
+++ b/movie-streaming/movies/templates/movies/movies-individual.html
@@ -91,7 +91,7 @@
       {{ movie.description }}
     </p>
 
-    <a href="" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch now</a>
+    <a href="{% url 'salaar' %}" class="btn btn-primary">Watch now</a>
 
   </div>
 
